<resources>
    <string name="app_name">AnimXmlLearn</string>
    <string name="anim_tween" >补间动画</string>
    <string name="anim_pro" >属性动画</string>
    <string name="anim_fra">逐帧动画</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>


    <string name="view_alpha">透明度渐变</string>
    <string name="view_scale">缩放</string>
    <string name="view_translate">平移</string>
    <string name="view_rotate">旋转</string>
    <string name="view_set">组合</string>
    <string name="anim_layout">布局动画（View动画）</string>
    <string name="rb_test">选我啊</string>
    <string name="start_translate">开始移动</string>
    <string name="start_run">转起来</string>
    <string name="anim_pro_z">z轴旋转</string>

    <string name="anim_obj_draw" >变色</string>
    <string name="anim_pro_1" >基本使用-1</string>
    <string name="brn_pro_2">ObjectAnim相关</string>
    <string name="one_value_no_get">变换1</string>
    <string name="btn_obj_3">变换3</string>
    <string name="btn_pro_2">变换2</string>
    <string name="value_anim">value动画</string>
    <string name="value_width">宽度改变</string>
    <string name="translate_linear">线性平移</string>
    <string name="translate_acc">加速平移</string>
    <string name="color_int">背景色-1</string>
    <string name="color_argb">背景色-2</string>
    <string name="inter_type_anim">插值估值器</string>
    <string name="interpolator">插值器</string>
    <string name="pro_inter_acc">Accelerate</string>
    <string name="pro_inter_acc_dec">AccelerateDecelerate</string>
    <string name="pro_inter_ant">anticipate</string>
    <string name="pro_inter_ant_over">AniticipateOvershoot</string>
    <string name="pro_inter_bounce">Bounce</string>
    <string name="pro_inter_cycle">cycle</string>
    <string name="pro_inter_dec">Decelerate</string>
    <string name="pro_inter_linear">Linear</string>
    <string name="pro_inter_over">Overshoot</string>


</resources>
